doc: adicionando a documentação e rotas

--- a/pokedex/src/configs-scss/main-styles.scss
+++ b/pokedex/src/configs-scss/main-styles.scss
@@ -11,7 +11,7 @@ html, body { height: 100%; }
 body { margin: 0; }
 
 html {
-    background-image: url('./assets/background.svg');
+    background-image: url('../assets/background.svg');
     background-size: cover;
 
     overflow: auto !important;
