feature: estilizando detaisl

--- a/pokedex/src/app/shared/list/list.component.html
+++ b/pokedex/src/app/shared/list/list.component.html
@@ -1,12 +1,23 @@
-<a class="pokemon">
-    <section class="pokemon__status">
-        <h2>Bulbasaur</h2>
-        <ul>
-            <li>Grass</li>
-            <li>Poison</li>
-        </ul>
-    </section>
-    <section class="pokemon__img">
-        <img src="../assets/bulbasaur.png" alt="Pokemon">
-    </section>
-</a>
+<app-search (emmitSearch)="getSearch($event)"></app-search>
+
+<section class="listagem">
+    <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons" >
+        <a [routerLink]="['details',pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
+            <section class="pokemon__status">
+                <h2>{{pokemon.name}}</h2>
+                <ul>
+                    <li *ngFor="let value of pokemon.status.types">
+                        {{value.type.name}}
+                    </li>
+                </ul>
+            </section>
+            <section class="pokemon__img">
+                <img
+                [src]="pokemon.status.sprites.other.dream_world.front_default"
+                [alt]="pokemon.name"
+              >
+            </section>
+        </a>
+    </ng-template>
+</section>
+
