--- a/pokedex/src/configs-scss/variables.scss
+++ b/pokedex/src/configs-scss/variables.scss
@@ -1,6 +1,6 @@
 :root {
     --branco: #fff;
     --primary: #262835;
-    --secundary: #ff5473;
+    --secondary: #ff5473;
     --cinza: rgb(221, 216, 216);
 }
