--- a/pokedex/src/app/shared/search/search.component.html
+++ b/pokedex/src/app/shared/search/search.component.html
@@ -1,4 +1,4 @@
 <form>
-    <input class="input-in" type="text" alt="Buscar Pokemon" placeholder="Buscar Pokemon">
+    <input class="input-in" #input type="text" (keyup)="search(input.value)" alt="Buscar Pokemon" placeholder="Buscar Pokemon">
     <img src="../../../assets/lupa.svg" alt="Buscar Pokemon">
 </form>
