feature: filtrando pokemon

--- a/pokedex/src/app/shared/error/error.component.html
+++ b/pokedex/src/app/shared/error/error.component.html
@@ -1,1 +1,12 @@
-<p>error works!</p>
+<app-header></app-header>
+
+<div>
+  <section class="error">
+    <p class="title">
+      Página não encontrada!
+    </p>
+
+    <img src="../../../assets/error.png" alt="Deu erro na mostragem do pokemon">
+  </section>
+  <p class="msg-erro">ERROR 404</p> 
+</div>
